Fixed text alignment for home sub info

--- a/less/main.less
+++ b/less/main.less
@@ -466,6 +466,7 @@ ul.designs {
 			margin: 14px 0 30px;
 			display: block;
 			color: @accent;
+			vertical-align: middle;
 
 			@media (max-width: @screen-lg) {
 				margin-bottom: 22px;
@@ -487,9 +488,8 @@ ul.designs {
 				text-transform: none;
 				margin-left: 8px;
 				font-size: 13px;
-				vertical-align: top;
+				vertical-align: middle;
 				display: inline-block;
-				margin-top: 1px;
 				opacity: 0.84;
 			}
 		}
